syntax = "proto2";


enum FileType {
    RepositoryV1 = 1;
    FileV1 = 2;
}

enum EncryptionType {
    ChachaPoly1305 = 1;
}

enum PasswordHashType {
    Argon2i = 1;
}

enum CompressionType {
    DeflateZip = 1;
}

message StoredFileWrapper {
    required FileType type = 1;
    required bytes content = 2;
}

message StoredRepositoryV1 {
    required bytes id = 1;
    required uint32 version = 2;
    required bytes repository_id = 3;
    required EncryptionType enc_type = 4;
    required PasswordHashType hash_type = 5;
    required bytes salt = 6;
    required bytes double_hashed_pw = 7;
    required bytes nonce = 8;
    required bytes encrypted_file_pw = 9;
    required string name = 10;
}

message StoredFileV1 {
    required bytes id = 1;
    required uint32 version = 2;
    required bytes repository_id = 3;
    required EncryptionType encryption_type = 4;
    required CompressionType compression_type = 5;
    required bytes nonce_header = 6;
    required bytes nonce_content = 7;
    required bytes encrypted_header = 8;
    required bytes encrypted_content = 9;
}